# intentos

./: .env.example  .gitignore  BLUEPRINT.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  EXECUTION_CONTRACT.md  GO_TO_MARKET.md  GUIDE.md  HN_POST.md  LICENSE  POSITIONING.md  QUICKSTART.md  README.md  ROADMAP.md  STATUS.md  STRATEGY.md  mkdocs.yml  review-capability-registry-migration.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
ci/: check_constitution.py  check_e2e.py  check_imports.py  check_rule.py  check_schemas.py
docs/: ARCHITECTURE.md  CNAME  QUICKSTART.md  index.md  quickstart.md
docs/adr/: ADR-0001-event-sourcing.md  ADR-INDEX.md
docs/archived/adr/: ADR-0002-kernel-stateless.md  ADR-INDEX.md
docs/archived/rfc/: RFC-0100-workflow-specification.md  RFC-0101-planner-architecture.md  RFC-0102-execution-engine.md  RFC-0104-rule-resolution.md  RFC-0201-capability-manifest.md  RFC-0202-capability-negotiation.md  RFC-0500-event-backbone.md  RFC-0502-security.md
docs/cli/: commands.md
docs/examples/: code_review.md  sentiment_analyze.md  text_summarize.md  translate.md
docs/glossary/: TERMS.md
docs/guide/: manifest.md  runtime.md  security.md  workflow.md
docs/rfc/: RFC-0001-execution-semantics.md  RFC-0002-constitution-reference.md  RFC-0100-workflow-specification.md  RFC-0101-planner-architecture.md  RFC-0200-capability-contract.md  RFC-0203-runtime-scheduling.md  RFC-0300-registry.md  RFC-0501-observability.md  RFC-0600-loop-learning.md  RFC-0700-cli-quickstart.md  RFC-INDEX.md
docs/spec/: SPEC-0000-core-concepts.md  SPEC-INDEX.md
docs/vision/: CONSTITUTION.md  PHILOSOPHY.md  VISION.md
examples/: data_extract.yaml  image_analyze.yaml  sentiment_analyze.yaml  translate.yaml
examples/hello-world/: README.md  hello_world.yaml
examples/rules/: sec-filing-rule.yaml
examples/workflows/: competitor_analysis.yaml  finance-stock-research.yaml  stock_research.en.yaml  stock_research.yaml
reference/: .gitignore  ARCHITECTURE-P1.md  CODE-REVIEW-REPORT.md  DESIGN-event-bus-capability-pool-state-machine.md  DESIGN-rfc-0300-registry-mvi.md  DESIGN-rfc-0400-capability-sdk.md  pyproject.toml
reference-runtime/: README.md  cli.py  mcp_server.py  pyproject.toml  requirements.txt  setup.py
reference-runtime/adapters/: __init__.py  anthropic_adapter.py  base.py  github_models_adapter.py  ollama_adapter.py  openai_adapter.py  openrouter_adapter.py
reference-runtime/commands/: agent.py  analytics.py  ask.py  audit.py  compare.py  context.py  cost.py  demo.py  doctor.py  event.py  evidence.py  evolution.py  export.py  helpers.py  import_cmd.py  list.py  mcp_server.py  proxy.py  prune.py  quickstart.py  registry.py  run.py  scan.py  security.py  trace.py  validate.py  workflow.py
reference-runtime/core/: __init__.py  agent_store.py  analytics.py  ask.py  ask_preferences.py  conditions.py  context_store.py  cost_model.py  event_store.py  evidence_store.py  evolution.py  execution_analytics.py  executor.py  federated.py  llm_provider.py  models.py  parser.py  planner.py  recorder.py  registry.py  scheduler.py  search.py  security.py  store_base.py  workflow.py  workflow_parser.py  workflow_runner.py
reference-runtime/examples/: __init__.py  anthropic_record.json  code_review.yaml  github-models_record.json  ollama_record.json  openai_record.json  openrouter_record.json  research_workflow.yaml  text_summarize.yaml
reference-runtime/examples/policies/: README.md  development.yaml  enterprise.yaml  strict.yaml
reference-runtime/proxy/: __init__.py  guard.py  server.py  tracer.py
reference-runtime/tests/: test_adapters.py  test_adaptive_workflow.py  test_agent.py  test_ask.py  test_ask_integration.py  test_cli_commands.py  test_conditions.py  test_cost_model.py  test_cross_runtime.py  test_doctor.py  test_event_store.py  test_evolution.py  test_executor.py  test_import_export.py  test_mcp_server.py  test_proxy.py  test_registry_persistence.py  test_search.py  test_security.py  test_security_integration.py  test_workflow.py  test_workflow_adapter_integration.py  test_workflow_integration.py  test_workflow_parser.py
reference-runtime/tools/: __init__.py  exporter.py  importer.py
reference-runtime/tools/formats/: mcp.py  openai.py
reference/my-cap/: __init__.py  handler.py  manifest.yaml  requirements.txt
reference/my-cap/examples/: my-cap-workflow.yaml
reference/my-cap/tests/: test_handler.py
reference/src/agentos/: __init__.py  capability_pool.py  cli.py  event_bus.py  execution_engine.py  llm_executor.py  models.py  observability.py  planner.py  registry.py  reporter.py  reviewer.py  workflow_loader.py
reference/src/agentos/backbone/: bus.py  event.py  schema.py  store.py
reference/src/agentos/capabilities/: __init__.py  llm.py  report.py  review.py  search.py
reference/src/agentos/registry/: __init__.py  manifest.py  workflows.py
reference/src/agentos/sdk/: __init__.py  loader.py  scaffold.py  validator.py
reference/src/agentos/task_executors/: __init__.py
reference/tests/: conftest.py  test_backbone.py  test_engine.py  test_registry.py
reference/workflows/: competitor_analysis.en.yaml
schemas/: SPEC-0001-capability-manifest.json  SPEC-0002-workflow-graph.json  SPEC-0003-event-schema.json
schemas/execution/: plan.json
specs/: SPEC-0001-capability-manifest.md  SPEC-0002-workflow-graph.md  SPEC-0003-event-schema.md  SPEC-0004-security-model.md  SPEC-0005-ask-command.md  SPEC-0006-federated-registry.md  SPEC-0007-infrastructure-standard.md
