[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intentos"
version = "0.4.3"
description = "Open-source flight recorder for AI agents — see exactly what your agent did, why it failed, and what it cost"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
authors = [
    {name = "Intent OS Project"},
]
keywords = ["ai", "agent", "observability", "flight-recorder", "proxy", "debugging", "cost-tracking", "llm", "cli", "claude-code", "cursor"]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
ask = ["openai>=1.0.0", "anthropic>=0.30.0"]
all = ["ask", "requests>=2.28"]

[project.urls]
Homepage = "https://github.com/haihaoxu/intentos"
Documentation = "https://haihaoxu.github.io/intentos/"
Source = "https://github.com/haihaoxu/intentos"
BugTracker = "https://github.com/haihaoxu/intentos/issues"

[project.scripts]
intent-os = "cli:main"

[tool.setuptools]
py-modules = ["cli", "mcp_server"]

[tool.setuptools.package-data]
commands = ["*.yaml"]
examples = ["*.yaml"]

[tool.setuptools.packages.find]
include = ["core*", "adapters*", "tools*", "commands*", "examples*", "proxy*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
markers = [
    "ask_e2e: end-to-end tests for the Ask command that connect to a real LLM provider",
]

