[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentos"
version = "0.1.0"
description = "Agent OS reference implementation"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
agentos = "agentos.cli:main"
agentos-cli = "agentos.cli:main"
CLI = "agentos.cli:main"
